Add POINTER_WHEEL_CHANGED event to mojo.

Also creating a MouseWheelEvent instead of a MouseEvent
from PointerEvent if its type is POINTER_WHEEL_CHANGED
to avoid stack overflow.

BUG=642486
TEST=events_unittests

Review-Url: https://codereview.chromium.org/2301593002
Cr-Commit-Position: refs/heads/master@{#416072}

Former-commit-id: ec96963b90a87eb8e30dd9e8b74f5951eeda14f2