ash/shared/immersive_fullscreen_controller.cc
@@ -234,8 +234,13 @@ void ImmersiveFullscreenController::OnPointerEventObserved(
     const gfx::Point& location_in_screen,
     views::Widget* target) {
   if (event.IsMousePointerEvent()) {
-    const ui::MouseEvent mouse_event(event);
-    OnMouseEvent(mouse_event, location_in_screen, target);
+    if (event.type() == ui::ET_POINTER_WHEEL_CHANGED) {
+      const ui::MouseWheelEvent mouse_wheel_event(event);
+      OnMouseEvent(mouse_wheel_event, location_in_screen, target);
+    } else {
+      const ui::MouseEvent mouse_event(event);
+      OnMouseEvent(mouse_event, location_in_screen, target);
+    }
   } else {
     DCHECK(event.IsTouchPointerEvent());
     const ui::TouchEvent touch_event(event);
